# chaos-benchmark

./: .gitignore  MANIFEST.in  README.md  ROADMAP.md  paper.bib  paper.md  pyproject.toml  requirements.txt
examples/: chaos_benchmark_dataset_demo.csv  plot_dataset.py
src/chaos_benchmark/: __init__.py  cli.py  features.py  forecast.py  generate.py  labeling.py  simulators.py
src/chaos_benchmark/web/: server.py
src/chaos_benchmark/web/static/: script.js  styles.css
src/chaos_benchmark/web/templates/: index.html
tests/: test_features_labeling.py  test_simulators.py
