[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaos-benchmark"
version = "0.1.0"
description = "A benchmark dataset generator for nonlinear dynamical systems (Logistic, Henon, Lorenz, Rossler, Mackey-Glass) with honest, documented labeling limitations."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Your Name"}]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
chaos-benchmark-generate = "chaos_benchmark.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
