[build-system]
requires = [ "setuptools>=68", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "chaos-benchmark"
version = "0.1.1"
description = "A benchmark dataset generator for nonlinear dynamical systems (Logistic, Henon, Lorenz, Rossler, Mackey-Glass) with honest, documented labeling limitations."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [ "numpy>=1.24", "scipy>=1.10", "pandas>=2.0", "tqdm>=4.65", "Flask>=3.0", "numba>=0.56.0",]
authors = [{name = "CS Hari Krishna", email = "csharikrishna1806@gmail.com"}]

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = [ "pytest>=7.0",]

[project.scripts]
chaos-benchmark-generate = "chaos_benchmark.cli:main"
chaos-benchmark-web = "chaos_benchmark.web.server:main"

[tool.setuptools.packages.find]
where = [ "src",]
